# netcode

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
cmake/: compiler_warnings.cmake
lib/include/sdl/: sdl.hpp
lib/src/: CMakeLists.txt  sdl.cpp
src/: CMakeLists.txt  Client.cpp  Client.hpp  Command_message.hpp  Entity.hpp  SDL.cpp  SDL.hpp  Server.cpp  Server.hpp  Server_update.hpp  main.cpp  two_in_one.cpp
src/client_prediction/: CMakeLists.txt  Client.cpp  Client.hpp  Command_message.hpp  Message.hpp  SDL.hpp  Server.cpp  Server.hpp  State_message.hpp  Utils.hpp  main.cpp
src/client_prediction_with_reconciliation/: CMakeLists.txt  Client.cpp  Client.hpp  Command_message.hpp  Server.cpp  Server.hpp  State_message.hpp  Utils.hpp  common.hpp  main.cpp
src/dumb_client/: CMakeLists.txt  Client.cpp  Client.hpp  Command_message.hpp  Server.cpp  Server.hpp  State_message.hpp  main.cpp
src/entity_interpolation/: CMakeLists.txt  Client.cpp  Client.hpp  Command_message.hpp  Server.cpp  Utils.hpp  main.cpp  reference.js
src/netcode/: CMakeLists.txt  Client.cpp  Client.hpp  Config.hpp  Server.cpp  Server.hpp  common.hpp  main.cpp
